<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trail_namer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="run.greenboard.greenboard.TrailNamer">

    <TextView
        android:text="@string/trailname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/trailName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/tags"
        android:ems="10"
        android:layout_marginTop="81dp"
        android:id="@+id/tagsEditText"
        android:layout_below="@+id/trailNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/add_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/tagsText"
        android:layout_below="@+id/trailNameEditText"
        android:layout_alignRight="@+id/trailName"
        android:layout_alignEnd="@+id/trailName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/trail_name"
        android:ems="10"
        android:id="@+id/trailNameEditText"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/trailName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/save_and_upload_trail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_trail_button"
        android:layout_marginTop="226dp"
        android:layout_below="@+id/tagsEditText"
        android:layout_alignLeft="@+id/tagsText"
        android:layout_alignStart="@+id/tagsText" />

    <Button
        android:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Cancel"
        android:layout_alignBaseline="@+id/save_trail_button"
        android:layout_alignBottom="@+id/save_trail_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

</RelativeLayout>
