<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:fillViewport="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="run.greenboard.greenboard.LoginActivity"
    android:layout_centerHorizontal="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="@dimen/login_logo_width"
            android:layout_height="@dimen/login_logo_height"
            android:background="#000"
            android:id="@+id/login_logo"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"/>

        <TextView
            style="@style/login_label_theme"
            android:text="@string/username_input_label"
            android:id="@+id/username_input_label" />

        <EditText
            style="@style/login_input_theme"
            android:id="@+id/username_input"
            android:layout_below="@+id/username_input_label"
            android:nextFocusUp="@id/username_input"
            android:nextFocusLeft="@id/username_input"
            android:inputType="textEmailAddress"
            android:hint="example@email.com"/>

        <TextView
            style="@style/login_label_theme"
            android:id="@+id/pass_input_label"
            android:text="@string/pass_input_label"
            android:layout_below="@+id/username_input" />

        <EditText
            style="@style/login_input_theme"
            android:id="@+id/password_input"
            android:inputType="textPassword"
            android:layout_below="@+id/pass_input_label"/>

        <Button
            style="@style/login_button_theme"
            android:id="@+id/loginBtn"
            android:layout_below="@+id/pass_input_label"
            android:text="@string/login_btn"
            android:background="#59983b"/>

        <Button
            style="@style/login_button_theme"
            android:id="@+id/registerBtn"
            android:layout_below="@+id/loginBtn"
            android:text="@string/make_account_btn"
            android:background="#983b59"
            android:textAllCaps="false"
            android:padding="0dp"
            android:layout_height="40dp"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebookLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:layout_below="@+id/registerBtn"/>
    </LinearLayout>
</ScrollView>
